--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -90,7 +90,7 @@ jobs:
       enable_ios_checks: true
       ios_pre_build_command: |
         pwd
-        xcrun swift package init --type library
+        "$(xcrun -f swift)" package init --type library
 
   soundness:
     name: Soundness
